LOGCXX-282: Thread::sleep not affected by Thread::interrupt, requires version bump